--- a/public/templates/HubLink/hubpdf.html
+++ b/public/templates/HubLink/hubpdf.html
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-xs-1 text-center icon pdf-icon"><i class="fa   fa-file-pdf-o fa-2x"></i></div>
             <div class="col-xs-8 title-text">
-                <span>{{vm.pdf.title}}</span>
+                <span>{{vm.post.title}}</span>
             </div>
             <div class="col-xs-3">
                     <span class="card-action pull-right">
                         <i class="fa fa-star-o fa-2x"></i>&nbsp;
-                        <i class="fa fa-times fa-2x"></i>
+                        <i class="fa fa-times fa-2x" ng-click="vm.delete()"></i>
                     </span>
             </div>
         </div>
@@ -16,8 +16,13 @@
     <div class="box-body pdf-body">
         <div class="row">
             <div class="col-xs-11 text-center pdf-wrapper">
-                <iframe src="https://drive.google.com/viewerng/viewer?url=http://ptgmedia.pearsoncmg.com/images/9780672329166/samplepages/0672329166_Sample.pdf&embedded=true" scrolling="no" frameborder="0" width="100%" height="500" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe src="{{vm.post.url}}" scrolling="no" frameborder="0" width="100%" height="500" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <div class="col-xs-11">
+                <span ng-repeat="tag in vm.post.tags" class=" tag label-primary">{{tag}}</span>
             </div>
         </div>
     </div>
 </div>
+<hub-post-delete></hub-post-delete>
+<toaster-container></toaster-container>
