--- a/public/templates/HubLink/hubvideo.html
+++ b/public/templates/HubLink/hubvideo.html
@@ -8,6 +8,7 @@
             <div class="col-xs-3">
                     <span class="card-action pull-right">
                         <i class="fa fa-star-o" ng-show="vm.owner"></i>&nbsp;
+                        <i class="fa fa-pencil-square-o" ng-show="vm.owner" ng-click="vm.edit()"></i>&nbsp;
                         <i class="fa fa-times" ng-show="vm.owner" ng-click="vm.delete()"></i>
                     </span>
             </div>
@@ -25,11 +26,12 @@
                     {{vm.post.description}}
                 </p>
             </div>
-            <div class="col-xs-12">
+            <div class="col-xs-11">
                <span ng-repeat="tag in vm.post.tags" class=" tag label-primary">{{tag}}</span>
             </div>
         </div>
     </div>
 </div>
 <hub-post-delete></hub-post-delete>
+<hub-post-edit></hub-post-edit>
 <toaster-container></toaster-container>
