--- a/public/templates/HubLink/hubPostDelete.html
+++ b/public/templates/HubLink/hubPostDelete.html
@@ -1,21 +1,20 @@
-<div id="deletePost" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                Are you sure you want to delete?
-            </div>
-            <!-- dialog body -->
-            <div class="modal-body">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                {{vm.post.title}}
-            </div>
-            <!-- dialog buttons -->
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" ng-click="vm.confirmDelete()">Delete</button>
+<form id="postEdit">
+    <div class="modal-header">
+        <h3 class="modal-title">Are you sure you want to delete?</h3>
+    </div>
+    <!-- dialog body -->
+    <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        {{vm.post.title}}
+    </div>
+    <!-- dialog buttons -->
+    <div class="modal-footer">
+        <button type="button" class="btn btn-danger" ng-click="vm.confirmDelete(vm.post.postId)">Delete</button>
                 <span>
                     <button type="button" class="btn btn-default" ng-click="vm.deleteClose()">Cancel</button>
                 </span>
-            </div>
-        </div>
     </div>
-</div>
+
+</form>
+
+
